reference ArrayFire installation in README